-- Enable necessary extensions
CREATE EXTENSION IF NOT EXISTS vector;
CREATE EXTENSION IF NOT EXISTS pg_trgm;

-- ==============================================================================
-- 1. Core Users & Profiles
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.user_profiles (
    user_id UUID PRIMARY KEY REFERENCES auth.users(id) ON DELETE CASCADE,
    display_name TEXT,
    locale TEXT,
    timezone TEXT,
    wake_time TIME,
    breakfast_time TIME,
    lunch_time TIME,
    dinner_time TIME,
    bed_time TIME,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.user_preferences (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    preferred_categories TEXT[],
    excluded_ingredients TEXT[],
    health_conditions JSONB,
    notification_enabled BOOLEAN,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.user_push_tokens (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    platform TEXT,
    token TEXT,
    enabled BOOLEAN,
    last_seen_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 2. Master Data (Foods, Disease, Drugs)
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.foods_master (
    rep_code TEXT PRIMARY KEY,
    rep_name TEXT,
    modern_name TEXT,
    name_en TEXT,
    aliases TEXT[],
    category TEXT,
    nutrients JSONB,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.disease_master (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    disease TEXT UNIQUE, -- 동의보감 증상명
    disease_read TEXT,
    disease_alias TEXT,
    disease_alias_read TEXT,
    modern_disease TEXT,
    modern_name_ko TEXT,
    name_en TEXT,
    icd10_code TEXT,
    category TEXT,
    aliases TEXT[],
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.catalog_drugs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name TEXT,
    generic_name TEXT,
    atc_code TEXT,
    source TEXT,
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.catalog_supplements (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name TEXT,
    ingredient TEXT,
    category TEXT,
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

-- Codes
CREATE TABLE IF NOT EXISTS public.catalog_major_codes (
    code TEXT PRIMARY KEY,
    name TEXT,
    domain TEXT,
    description TEXT,
    sort_order INT,
    is_enabled BOOLEAN DEFAULT TRUE,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.catalog_minor_codes (
    code TEXT PRIMARY KEY,
    major_code TEXT REFERENCES public.catalog_major_codes(code),
    name TEXT,
    name_en TEXT,
    description TEXT,
    sort_order INT,
    is_enabled BOOLEAN DEFAULT TRUE,
    meta JSONB,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 3. Intake Management
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.user_intake_items (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    item_type TEXT, -- drug | supplement | food
    catalog_drug_id BIGINT REFERENCES public.catalog_drugs(id),
    catalog_supplement_id BIGINT REFERENCES public.catalog_supplements(id),
    rep_code TEXT REFERENCES public.foods_master(rep_code),
    display_name TEXT,
    dose_text TEXT,
    route TEXT,
    active BOOLEAN DEFAULT TRUE,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.intake_schedules (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    intake_item_id BIGINT REFERENCES public.user_intake_items(id) ON DELETE CASCADE,
    pattern TEXT, -- daily, weekdays, etc.
    days_of_week INT[],
    time_anchor TEXT, -- breakfast, lunch, etc.
    custom_time TIME,
    offset_minutes INT,
    rules JSONB,
    is_enabled BOOLEAN DEFAULT TRUE,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.intake_logs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    schedule_id BIGINT REFERENCES public.intake_schedules(id) ON DELETE SET NULL,
    scheduled_at TIMESTAMPTZ,
    taken_at TIMESTAMPTZ,
    status TEXT, -- pending, taken, skipped
    note TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 4. Knowledge & Content Maps
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.symptom_ingredient_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    symptom_id BIGINT REFERENCES public.disease_master(id),
    rep_code TEXT REFERENCES public.foods_master(rep_code),
    direction TEXT, -- recommend, avoid, etc.
    rationale_ko TEXT,
    rationale_en TEXT,
    priority INT,
    source_ref TEXT,
    evidence_level TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(symptom_id, rep_code)
);

CREATE TABLE IF NOT EXISTS public.recipes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title TEXT,
    description TEXT,
    ingredients JSONB,
    steps JSONB,
    prep_time_min INT,
    cook_time_min INT,
    servings INT,
    difficulty TEXT,
    tags TEXT[],
    meal_type TEXT[],
    nature TEXT,
    flavor TEXT[],
    target_organs TEXT[],
    source_ref TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.symptom_recipe_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    symptom_id BIGINT REFERENCES public.disease_master(id),
    recipe_id BIGINT REFERENCES public.recipes(id),
    meal_slot TEXT,
    priority INT,
    rationale_ko TEXT,
    best_time TEXT,
    frequency TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(symptom_id, recipe_id)
);

CREATE TABLE IF NOT EXISTS public.content_videos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    provider TEXT,
    video_id TEXT,
    title TEXT,
    channel TEXT,
    tags TEXT[],
    created_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.symptom_video_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    symptom_id BIGINT REFERENCES public.disease_master(id),
    video_pk BIGINT REFERENCES public.content_videos(id),
    priority INT
);

CREATE TABLE IF NOT EXISTS public.ingredient_product_links (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rep_code TEXT REFERENCES public.foods_master(rep_code),
    provider TEXT,
    query_template TEXT,
    disclaimer_ko TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.interaction_facts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    a_type TEXT,
    a_ref TEXT,
    b_type TEXT,
    b_ref TEXT,
    severity TEXT,
    evidence_level TEXT,
    mechanism TEXT,
    summary_ko TEXT,
    action_ko TEXT,
    sources JSONB,
    pmids TEXT[],
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 5. PubMed & RAG
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.pubmed_papers (
    pmid TEXT PRIMARY KEY,
    title TEXT,
    abstract TEXT,
    journal TEXT,
    pub_year INT,
    publication_types TEXT[],
    mesh_terms TEXT[],
    url TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.pubmed_embeddings (
    pmid TEXT REFERENCES public.pubmed_papers(pmid) ON DELETE CASCADE,
    chunk_index INT,
    content TEXT,
    embedding vector(1536), -- text-embedding-3-small uses 1536 dim
    created_at TIMESTAMPTZ DEFAULT NOW(),
    PRIMARY KEY (pmid, chunk_index)
);

CREATE TABLE IF NOT EXISTS public.modern_to_mesh_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    modern_disease_id BIGINT REFERENCES public.disease_master(id),
    mesh_term TEXT,
    mesh_ui TEXT,
    mesh_tree TEXT,
    search_role TEXT,
    priority INT,
    note TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(modern_disease_id, mesh_term)
);

CREATE TABLE IF NOT EXISTS public.symptom_pubmed_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    symptom_id BIGINT REFERENCES public.disease_master(id),
    keyword_en TEXT,
    mesh_term TEXT,
    search_role TEXT,
    priority INT,
    note TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(symptom_id, keyword_en)
);

CREATE TABLE IF NOT EXISTS public.ingredient_pubmed_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rep_code TEXT REFERENCES public.foods_master(rep_code),
    ingredient_name_en TEXT,
    mesh_term TEXT,
    bioactive_compound TEXT,
    compound_mesh TEXT,
    search_role TEXT,
    priority INT,
    note TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
    -- Logic unique index: (rep_code, ingredient_name_en, bioactive_compound)
);
CREATE UNIQUE INDEX IF NOT EXISTS uq_ingredient_pubmed_map_rep_ing_compound 
ON public.ingredient_pubmed_map (rep_code, ingredient_name_en, COALESCE(bioactive_compound, ''));

-- ==============================================================================
-- 6. TKM / Traditional Foods (Donguibogam)
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.tkm_symptom_master (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tkm_code TEXT UNIQUE,
    hanja TEXT,
    korean TEXT NOT NULL,
    name_en TEXT,
    aliases TEXT[] DEFAULT '{}',
    description TEXT,
    category TEXT,
    pattern_tags TEXT[] DEFAULT '{}',
    source_book TEXT,
    source_ref TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.tkm_to_modern_map (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tkm_symptom_id BIGINT REFERENCES public.tkm_symptom_master(id),
    modern_disease_id BIGINT REFERENCES public.disease_master(id),
    mapping_strength TEXT,
    mapping_type TEXT,
    evidence_note TEXT,
    reviewer TEXT,
    reviewed_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(tkm_symptom_id, modern_disease_id)
);

CREATE TABLE IF NOT EXISTS public.traditional_foods (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  rep_code TEXT,
  rep_name TEXT,
  trad_code TEXT,
  trad_name TEXT,
  disease TEXT,
  disease_read TEXT,
  disease_alias TEXT,
  disease_alias_read TEXT,
  modern_disease TEXT,
  disease_src TEXT,
  disease_src_read TEXT,
  disease_src_year TEXT,
  disease_src_section TEXT,
  disease_content TEXT,
  prescription TEXT,
  prescription_read TEXT,
  prescription_modern TEXT,
  prescription_alias TEXT,
  presc_src TEXT,
  presc_src_read TEXT,
  presc_src_year TEXT,
  presc_src_section TEXT,
  indication TEXT,
  etc TEXT,
  food_type TEXT,
  ingredients TEXT,
  preparation TEXT,
  dosage TEXT,
  created_at TIMESTAMPTZ DEFAULT NOW()
);

-- Indexes for traditional_foods
CREATE INDEX IF NOT EXISTS idx_tf_rep_code ON public.traditional_foods(rep_code);
CREATE INDEX IF NOT EXISTS idx_tf_trad_code ON public.traditional_foods(trad_code);
CREATE INDEX IF NOT EXISTS idx_tf_disease ON public.traditional_foods(disease);

-- ==============================================================================
-- 7. Reports & Sessions
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.reports (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    report_type TEXT,
    title TEXT,
    inputs JSONB,
    content_md TEXT,
    pdf_path TEXT,
    status TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.user_input_sessions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    input_type TEXT,
    input_summary TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.user_symptoms (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    session_id BIGINT REFERENCES public.user_input_sessions(id) ON DELETE CASCADE,
    symptom_id BIGINT REFERENCES public.disease_master(id),
    symptom_text TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.user_prescriptions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    session_id BIGINT REFERENCES public.user_input_sessions(id) ON DELETE CASCADE,
    prescription_image_url TEXT,
    prescribed_at DATE,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.user_prescription_drugs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    prescription_id BIGINT REFERENCES public.user_prescriptions(id) ON DELETE CASCADE,
    drug_name TEXT,
    dosage TEXT,
    frequency TEXT,
    duration TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.session_recommendation_results (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id BIGINT REFERENCES public.user_input_sessions(id) ON DELETE CASCADE,
    result_type TEXT,
    ref_table TEXT,
    ref_id TEXT,
    reason TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 8. Restaurants & Catalog
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.restaurants (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    provider TEXT,
    external_id TEXT,
    name TEXT,
    category TEXT,
    address_full TEXT,
    address_road TEXT,
    address_region TEXT,
    latitude DECIMAL,
    longitude DECIMAL,
    rating_avg DECIMAL,
    review_count INT,
    phone TEXT,
    website_url TEXT,
    is_open BOOLEAN,
    raw_json JSONB,
    last_synced_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(provider, external_id)
);

CREATE TABLE IF NOT EXISTS public.restaurant_menus (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    restaurant_id BIGINT REFERENCES public.restaurants(id) ON DELETE CASCADE,
    menu_name TEXT,
    menu_category TEXT,
    price INT,
    currency TEXT,
    rep_codes TEXT,
    description TEXT,
    is_signature BOOLEAN,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.restaurant_search_templates (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rep_code TEXT REFERENCES public.foods_master(rep_code),
    provider TEXT,
    query_template TEXT,
    category_filter TEXT,
    disclaimer_ko TEXT,
    priority INT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(rep_code, provider, query_template)
);

CREATE TABLE IF NOT EXISTS public.restaurant_search_requests (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    request_hash TEXT UNIQUE,
    provider TEXT,
    query TEXT,
    latitude DECIMAL,
    longitude DECIMAL,
    radius_meters INT,
    category_filter TEXT,
    sort_by TEXT,
    result_count INT,
    total_available INT,
    expires_at TIMESTAMPTZ,
    cache_hit_count INT,
    api_quota_used INT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    last_accessed_at TIMESTAMPTZ
);

CREATE TABLE IF NOT EXISTS public.restaurant_search_results (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    search_request_id BIGINT REFERENCES public.restaurant_search_requests(id) ON DELETE CASCADE,
    restaurant_id BIGINT REFERENCES public.restaurants(id) ON DELETE CASCADE,
    rank_position INT,
    distance_meters INT,
    relevance_score DECIMAL,
    matched_keywords TEXT,
    matched_rep_codes TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(search_request_id, restaurant_id)
);

CREATE TABLE IF NOT EXISTS public.user_restaurant_favorites (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    restaurant_id BIGINT REFERENCES public.restaurants(id) ON DELETE CASCADE,
    note TEXT,
    tags TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW(),
    UNIQUE(user_id, restaurant_id)
);

CREATE TABLE IF NOT EXISTS public.user_restaurant_visit_logs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    restaurant_id BIGINT REFERENCES public.restaurants(id) ON DELETE CASCADE,
    action_type TEXT,
    search_request_id BIGINT REFERENCES public.restaurant_search_requests(id),
    symptom_id BIGINT REFERENCES public.disease_master(id),
    created_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 9. Billing
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.plans (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code TEXT UNIQUE,
    name TEXT,
    price INT,
    currency TEXT,
    features JSONB,
    is_active BOOLEAN
);

CREATE TABLE IF NOT EXISTS public.subscriptions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    plan_code TEXT REFERENCES public.plans(code),
    status TEXT,
    current_period_start TIMESTAMPTZ,
    current_period_end TIMESTAMPTZ,
    provider TEXT,
    provider_sub_id TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS public.payments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE,
    amount INT,
    currency TEXT,
    provider TEXT,
    provider_payment_id TEXT,
    payment_type TEXT,
    reference_id BIGINT,
    status TEXT,
    created_at TIMESTAMPTZ DEFAULT NOW()
);

-- ==============================================================================
-- 10. Cache Tables
-- ==============================================================================

CREATE TABLE IF NOT EXISTS public.youtube_cache (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    query_hash TEXT UNIQUE,
    query TEXT,
    provider TEXT DEFAULT 'youtube',
    response_json JSONB,
    expires_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    last_accessed_at TIMESTAMPTZ
);

CREATE TABLE IF NOT EXISTS public.commerce_cache (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    query_hash TEXT UNIQUE,
    query TEXT,
    provider TEXT,
    response_json JSONB,
    expires_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    last_accessed_at TIMESTAMPTZ
);
